SERVER-20972 indexStats should not assert on missing db or collection